--- a/css/softstyle.css
+++ b/css/softstyle.css
@@ -108,6 +108,13 @@ html, body {
     box-shadow: #666 0px 2px 3px;
 }
 
+@media only screen and (max-width: 747px) {
+    .mainHeaderText {
+        flex: 1 100%;
+        text-align: center;
+    }
+}
+
 /*
 .outerShell {
     min-width: 100%;
