--- a/css/softstyle.css
+++ b/css/softstyle.css
@@ -112,6 +112,14 @@ html, body {
     .mainHeaderText {
         flex: 1 100%;
         text-align: center;
+        margin-bottom: 0px;
+    }
+
+    .mainHeaderSting {
+        flex: 1 100%;
+        text-align: center;
+        font-size: 15px;
+        margin-top:0px;
     }
 }
 
