--- a/css/softstyle.css
+++ b/css/softstyle.css
@@ -91,6 +91,12 @@ html, body {
     margin-top: 5px;
     margin-bottom: 5px;
     color:white;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .mainShell {
