--- a/css/softstyle.css
+++ b/css/softstyle.css
@@ -79,12 +79,24 @@ html, body {
     margin-top:5px;
     margin-bottom:5px;
     transition: 0.2s linear all;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .menuItem:hover {
     border: 0.5px solid white;
     border-radius: 3px;
     background-color:#000000;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .menuText {
